# Simulador-de-Sistemas-Operacionais

./: LEIA-ME_ENTREGA.md  README.md
CSV teste/: 1.csv  2.csv  3.csv
Projeto_SO/: CMakeLists.txt  csvreader.cpp  csvreader.h  ganttwidget.cpp  ganttwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  memory.h  process.h  report.cpp  report.h  reportwindow.cpp  reportwindow.h  reportwindow.ui  scheduler.cpp  scheduler.h  tela_inicial.cpp  tela_inicial.h
